# mcrnmf

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  changelog.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/mcrnmf/: models.html  nnls.html
_sources/: changelog.rst.txt  index.rst.txt
_sources/usage/: index.rst.txt  reuse_w.rst.txt
conda-recipe/local/: meta.yaml
docs/: generate_docs.sh  requirements.txt
docs/resources/figures/: decomp_visual.tex
docs/resources/logo/: logo.tex
docs/resources/notebooks/: usage.ipynb
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/source/_templates/autosummary/: class.rst
docs/source/usage/: advanced.rst  workflow.rst
mcrnmf/: __init__.py  _utils.py  models.py  nnls.py
mcrnmf/datasets/: __init__.py  _loaders.py
mcrnmf/tests/: models_test.py  nnls_test.py
usage/: advanced.html  index.html  reuse_w.html  workflow.html
